--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -6,31 +6,24 @@ on:
       - master
 
 jobs:
-  compile-gc:
-    name: Compile GCs
+  compile-native-source:
+    name: Compile native sources
     runs-on: windows-2019
-    strategy:
-      matrix: 
-        gc: [
-        {name: none,    include: [shared]},
-        {name: immix,   include: [shared, immix_commix]},
-        {name: commix,  include: [shared, immix_commix]}
-        ]
-      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       
       #Prepare environment, clang needs to be installed
+      #Compilation on MSVC needs c++14 or higher and expects llvm 10.0.0 or newer
       - name: Cache LLVM
         id: cache-llvm
         uses: actions/cache@v2
         with:
           path: |
             C:\Program Files\LLVM\
-          key: ${{ runner.os }}-llvm-6
+          key: ${{ runner.os }}-llvm-10
       - name: Install LLVM
         if: steps.cache-llvm.outputs.cache-hit != 'true'
-        run: choco install llvm --version=6.0.1 
+        run: choco install llvm --version=10.0.0
 
       - name: Add LLVM on Path
         run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -40,12 +33,50 @@ jobs:
       # Compile all files in GC and included shared directories using clang.
       - name: Compile GCs
         run: |
-          $gcRoot       = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\gc").Path 
-          $gcDir        = %{Join-Path $gcRoot "${{matrix.gc.name}}"}
-          $sharedDirs   = @("${{ join(matrix.gc.include, '", "') }}") | %{Join-Path $gcRoot $_}
-          $compiledDirs = @($gcDir) + $sharedDirs
-          $includes     = $sharedDirs | %{"-I" + $_}
-          Get-ChildItem -Path $compiledDirs -Include *.c -Recurse -File `
-          | ForEach-Object {clang -std=gnu11 -Wno-override-module $includes -c "$_"}
-          Get-ChildItem -Path $compiledDirs -Include *.cpp -Recurse -File `
-          | ForEach-Object {clang++ -std=c++14 -Wno-override-module $includes -c "$_"}
+          $gcRoot       = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\gc").Path
+          $gcIncludes   = @{}
+          $gcIncludes.Add('none',   @('shared'))
+          $gcIncludes.Add('immix',  @('shared', 'immix_commix'))
+          $gcIncludes.Add('commix', @('shared', 'immix_commix'))
+          $gcIncludes
+
+          ForEach($gcName in $gcIncludes.Keys){
+            $gcDir        = Join-Path $gcRoot $gcName
+            $includeDirs  = $gcIncludes[$gcName] | ForEach-Object{ Join-Path $gcRoot $_ }
+            $includes     = $includeDirs | %{"-I" + $_ }
+            $compiledDirs = @($gcDir) + $includeDirs
+
+            echo "Compiling $gcName"
+            Get-ChildItem -Path $compiledDirs -Filter *.c -Recurse -File `
+            | ForEach-Object {clang -std=gnu11 -Wno-override-module $includes -c "$_"}
+            Get-ChildItem -Path $compiledDirs -Filter *.cpp -Recurse -File `
+            | ForEach-Object {clang++ -std=c++14 -Wno-override-module $includes -c "$_"}
+          }
+
+      - name: Compile clib
+        run: |
+          $codeDir      = (Resolve-Path -Path ".\clib\src\main\resources\scala-native\").Path
+          Get-ChildItem -Path $codeDir -Include *.c -Recurse -File `
+          | ForEach-Object {clang -std=gnu11 -c "$_"}
+
+      - name: Compile posixlib
+        run: |
+          $codeDir      = (Resolve-Path -Path ".\posixlib\src\main\resources\scala-native\").Path
+          Get-ChildItem -Path $codeDir -Include *.c -Recurse -File `
+          | ForEach-Object {clang -std=gnu11 -c "$_"}
+
+      # Compile nativelib excluding GC and optional dependencies
+      - name: Compile nativelib
+        run: |
+          $codeDir      = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\").Path
+
+          $cSources = (Get-ChildItem -Path $codeDir -Directory -Exclude gc,optional `
+          | ForEach-Object { Get-ChildItem -Path $_.FullName -File -Recurse -Include *.c,*.S }`
+          ) + (Get-ChildItem -Path $codeDir -File -Filter *.c)
+
+          $cppSources = (Get-ChildItem -Path $codeDir -Directory -Exclude gc,optional `
+          | ForEach-Object { Get-ChildItem -Path $_.FullName -File -Recurse -Include *.cpp }`
+          ) + (Get-ChildItem -Path $codeDir -File -Filter *.cpp)
+
+          $cSources | ForEach-Object {clang -std=gnu11 -c "$_"}
+          $cppSources | ForEach-Object {clang++ -std=c++14 -c "$_"}
