--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -131,15 +131,23 @@ jobs:
           - scala: 2.13.4
             build-mode: debug
             gc: immix
+            host_arch: amd64
+            docker_arch: library
           - scala: 2.13.4
             build-mode: release-fast
             gc: commix
+            host_arch: amd64
+            docker_arch: library
           - scala: 2.13.5
             build-mode: debug
             gc: immix
+            host_arch: amd64
+            docker_arch: library
           - scala: 2.13.5
             build-mode: release-fast
             gc: commix
+            host_arch: amd64
+            docker_arch: library
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
@@ -188,8 +196,12 @@ jobs:
         include:
           - scala: 2.13.4
             build-mode: release-fast
+            host_arch: amd64
+            docker_arch: library
           - scala: 2.13.5
             build-mode: release-fast
+            host_arch: amd64
+            docker_arch: library
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
